--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "css": ["surlStyle.css"],
     "run_at": "document_end"
   }],
-  "page_action": {
+  "browser_action":{
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/Icon-16.png",
@@ -22,6 +22,15 @@
       "128": "images/Icon-128.png"
     }
   },
+  // "page_action": {
+  //   "default_popup": "popup.html",
+  //   "default_icon": {
+  //     "16": "images/Icon-16.png",
+  //     "32": "images/Icon-32.png",
+  //     "48": "images/Icon-48.png",
+  //     "128": "images/Icon-128.png"
+  //   }
+  // },
   "icons": {
     "16": "images/Icon-16.png",
     "32": "images/Icon-32.png",
