--- a/manifest.json
+++ b/manifest.json
@@ -22,15 +22,7 @@
       "128": "images/Icon-128.png"
     }
   },
-  // "page_action": {
-  //   "default_popup": "popup.html",
-  //   "default_icon": {
-  //     "16": "images/Icon-16.png",
-  //     "32": "images/Icon-32.png",
-  //     "48": "images/Icon-48.png",
-  //     "128": "images/Icon-128.png"
-  //   }
-  // },
+  "web_accessible_resources": ["popup.js"],
   "icons": {
     "16": "images/Icon-16.png",
     "32": "images/Icon-32.png",
