--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "content_scripts": [{
         "js": ["goToLocation.js", "getDocumentSelection.js"],
         "matches": ["http://*/*", "https://*/*"],
-        "all_frames": true,
+        "all_frames": false,
         "css": ["surlStyle.css"],
         "run_at": "document_end"
     }],
