make code more robust clean up duplicate code

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "persistent": true
     },
     "content_scripts": [{
-        "js": ["goToLocation.js", "getDocumentSelection.js"],
+        "js": ["common.js", "goToLocation.js", "getDocumentSelection.js"],
         "matches": ["http://*/*", "https://*/*"],
         "all_frames": false,
         "css": ["surlStyle.css"],
