--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Smart Link",
-    "version": "1.0",
-    "description": "Navigate to points of interest on a page",
+    "name": "Curl-link",
+    "version": "1.0.0",
+    "description": "Curate page content and share it with a link",
     "permissions": ["activeTab", "storage", "contextMenus", "tabs", "declarativeContent"],
     "background": {
         "scripts": ["background.js"],
@@ -17,18 +17,18 @@
     "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "images/Icon-16.png",
-            "32": "images/Icon-32.png",
-            "48": "images/Icon-48.png",
-            "128": "images/Icon-128.png"
+            "16": "images/Curl-icon-16.png",
+            "32": "images/Curl-icon-32.png",
+            "48": "images/Curl-icon-48.png",
+            "128": "images/Curl-icon-128.png"
         }
     },
     "web_accessible_resources": ["popup.js"],
     "icons": {
-        "16": "images/Icon-16.png",
-        "32": "images/Icon-32.png",
-        "48": "images/Icon-48.png",
-        "128": "images/Icon-128.png"
+        "16": "images/Curl-icon-16.png",
+        "32": "images/Curl-icon-32.png",
+        "48": "images/Curl-icon-48.png",
+        "128": "images/Curl-icon-128.png"
     },
     "manifest_version": 2
 }
