--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 2,
-  "name": "Pin tabs - Tab Manager",
-  "short_name": "Keep tabs history",
-  "version": "1.2.0",
+  "name": "Smart Link",
+  "short_name": "highlight webpages and share them with a simple url",
+  "version": "1.1.0",
   "description":
-    "Pin Tabs allows the user to pin one or more tabs for short periods, keep track of the expired tabs in the history and save energy",
+    "Smart Links allows you to make highlighted selections on a webpage and send them to other smartlink users. Simply highlight text on a webpage, right click, select 'Copy Smartlink', and paste the generated url wherever you like. Don't worry, if the recepient doesn't use the smartlink extension, the generated link still works as a normal url.",
   "browser_action": {
     "default_title": "Show the list of pinned tabs",
     "default_popup": "pages/popup.html"
   },
-  "author": "Pier Roberto Lucisano",
+  "author": "Rowan Baker-French",
   "background": {
     "page": "pages/background.html"
   },
